--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         /* Hero Section */
         .hero {
             height: 60vh;
-            background-image: url('../images/raageleje.jpg'); 
+            background-image: url('raageleje.jpg'); 
             background-repeat: no-repeat; 
             background-position: center; 
             background-size: cover; 
