--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
     <header>
         <nav>
             <a href="#" class="logo">
-                <img src="/images/logo.png">
+                <img src="logo.png">
             </a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
